5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1728_2499.log
== SUBMITION (2019-06-26 12:26:12) 
-- CODE:
import math*

k = int(input("Numero de termos: "))

soma = 0
t = 0

while (t < k):
	tg = 1/(math.factorial(t))
	soma = soma + tg
	t = t+1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.751532
-- ERROR:
  File "/home/codebench/codes/1728/2499/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:26:21) 
-- CODE:
import math*

k = int(input("Numero de termos: "))

soma = 0
t = 0

while (t < k):
	tg = 1/(math.factorial(t))
	soma = soma + tg
	t = t+1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.633116
-- ERROR:
  File "/home/codebench/codes/1728/2499/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:26:43) 
-- CODE:
import math

k = int(input("Numero de termos: "))

soma = 0
t = 0

while (t < k):
	tg = 1/(math.factorial(t))
	soma = soma + tg
	t = t+1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.781928
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
